# hs-distributed

./: TAGS  hs.cabal  stack.yaml
app/: Main.hs  Test.hs
src/GFS/: ChunkServer.hs  Client.hs  Master.hs  Scratch.hs  Types.hs
src/GFS/Master/Impl/: Client.hs  Scratch.hs  Server.hs  Types.hs
src/MapReduce/: Types.hs
src/Raft/: .#Utils.hs  Server.hs  Utils.hs
src/Scenario/: PostgreSQL.hs  Process.hs  SQL.hs  Scratch.hs  Terms.hs  Types.hs  Utils.hs
src/Utils/: Distributed.hs
