name:                hs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hs#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     GFS.Scratch
  build-depends:       base >= 4.7 && < 5
                     , basic-prelude
                     , binary
                     , bytestring
                     , distributed-process
                     , distributed-process-lifted
                     , distributed-process-monad-control
                     , distributed-process-simplelocalnet
                     , distributed-static
                     , mtl
                     , network
                     , network-transport-tcp
                     , network-transport
                     , exceptions
                     , uuid
  ghc-options:         -Wno-name-shadowing
  default-language:    Haskell2010

executable hs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hs
  default-language:    Haskell2010

executable test-exe
  hs-source-dirs:      app
  main-is:             Test.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hs
  default-language:    Haskell2010



test-suite hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hs
